fix mentor comment: Images shouldnt overlap on the hover

--- a/src/styles/blocks/compare.scss
+++ b/src/styles/blocks/compare.scss
@@ -31,11 +31,12 @@
 
   &__link {
     display: block;
-    transition: transform $duration;
+  }
 
-    &:hover {
-      transform: scale(1.2);
-      z-index: 1;
-    }
+  transition: transform $duration;
+
+  &:hover {
+    transform: scale(1.1);
+    z-index: 1;
   }
 }
