--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -68,8 +68,7 @@
     transition: transform $duration;
 
     &:hover {
-      transform: scale(1.2);
-      z-index: 1;
+      transform: scale(1.05);
     }
   }
 
